--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "^3.1.10",
     "express": "^4.22.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.2",
     "http-errors": "~1.6.3",
     "morgan": "^1.10.1"
   }
